--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,8 +7,11 @@ phases:
       - docker --version
   build:
     commands:
+      - echo "Building Docker image"
       - docker build -t portfolio .
-      - docker tag portfolio:latest jvmartyns/portfolio:latest
+      - $(aws ecr get-login --no-include-email --region $AWS_REGION)
+      - docker tag portfolio:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/portfolio:latest
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/portfolio:latest
   post_build:
     commands:
       - echo "Post-build phase"
