--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ botocore==1.29.155
 certifi==2023.5.7
 charset-normalizer==3.1.0
 Django==4.2.1
+django-cors-headers==4.2.0
 django-modeltranslation==0.18.10
 django-ranged-response==0.2.0
 django-simple-captcha==0.5.17
