--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,8 +10,10 @@ phases:
       - echo "Building Docker image"
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
       - docker build -t portfolio .
-      - docker tag portfolio:latest $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/portfolio:latest
-      - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/portfolio:latest
+      - export IMAGE_URL=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/portfolio:latest
+      - docker tag portfolio:latest $IMAGE_URL
+      - docker push $IMAGE_URL
+      - sed -i "s|\${image_url}|$IMAGE_URL|g" "Dockerrun.aws.json"
   post_build:
     commands:
       - echo "Post-build phase"
