add google analytics

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,19 @@ botocore==1.29.155
 certifi==2023.5.7
 charset-normalizer==3.1.0
 Django==4.2.1
+django-analytical==3.1.0
 django-cors-headers==4.2.0
 django-modeltranslation==0.18.10
 django-ranged-response==0.2.0
 django-simple-captcha==0.5.17
 django-smtp-ssl==1.0
 django-storages==1.13.2
+django-tracking2==0.5.1
+gunicorn==21.2.0
 idna==3.4
 jmespath==1.0.1
 markdown2==2.4.8
+packaging==23.1
 Pillow==9.5.0
 psycopg2-binary==2.9.6
 python-dateutil==2.8.2
